<resources>
    <string name="app_name">NITCloud</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in"><u>SignIn</u></string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="sign_up"><u>Swipe to Sign Up</u></string>
    <string name="user_name"><i>UserName : </i></string>
    <string name="password"><i> Password : </i></string>
    <string name="createanaccount"><i> CREATE AN ACCOUNT </i></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
        <string name="otp">Enter OTP here...</string>
</resources>
