<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_nitcloud" tools:context=".NITCloudActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="123dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:id="@+id/useremail"
            android:textSize="20dp" />

        <EditText
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/useremailvalue" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:text="@string/password"
            android:id="@+id/password"
            android:layout_gravity="center_vertical"
            android:textSize="20dp" />

        <EditText
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordvalue"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:id="@+id/forgotpassword"
            android:textSize="20dp"
            android:layout_weight="0.05"
            android:textStyle="italic"
            />

        <TextView
            android:layout_marginLeft="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/signin"
            android:textSize="20dp"
            android:layout_weight="0.05"
            android:textStyle="italic"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:weightSum="1"
        android:onClick="methodSignUp">

        <TextView
            android:layout_gravity="center"
            android:layout_marginLeft="85dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/signup"
            android:textSize="25dp"
            android:layout_weight="0.05"
            android:textStyle="italic"
            />

    </LinearLayout>
</LinearLayout>
